--- a/TesterBlazor/Components/Pages/TelegramTester.razor
+++ b/TesterBlazor/Components/Pages/TelegramTester.razor
@@ -141,7 +141,7 @@
     else
     {
         <fieldset style="border: 1px solid #ccc; padding: 10px; margin-bottom: 20px; border-radius: 10p">
-            <table class="table table-active table-hover">
+            <table class="table table-hover">
                 <thead>
                     <tr>
                         <th scope="col">Usuario</th>
