Cambios grandes. - Blazor: se agregan nuevas páginas, se comienza a trabajar sobre código conexión a base. - Base: nuevos procedimientos almacenados, nuevas tablas. Ajustes. - Lib: Conexión con base, reajustes y refactorización

--- a/TesterBlazor/Components/Pages/InfoCredito/Nucleos/Modales/ModalEditarNucleo.razor
+++ b/TesterBlazor/Components/Pages/InfoCredito/Nucleos/Modales/ModalEditarNucleo.razor
@@ -12,14 +12,10 @@
                 <div class="mb-3">
                     <label for="relacionSelect" class="form-label"><strong>Relación:</strong></label>
                     <select id="relacionSelect" class="form-select" @bind="Relacion">
-                        <option value="Padre">Padre</option>
-                        <option value="Madre">Madre</option>
-                        <option value="Hermano">Hermano</option>
-                        <option value="Hermana">Hermana</option>
-                        <option value="Esposo">Esposo</option>
-                        <option value="Esposa">Esposa</option>
-                        <option value="Hijo">Hijo</option>
-                        <option value="Hija">Hija</option>
+                        <option value="Familia">Familia</option>
+                        <option value="Amigos">Amigos</option>
+                        <option value="Amigos">Novios</option>
+                        <option value="Amigos">Compañeros</option>
                     </select>
                 </div>
             </div>
