--- a/TesterBlazor/Components/Pages/TelegramTester.razor
+++ b/TesterBlazor/Components/Pages/TelegramTester.razor
@@ -4,6 +4,7 @@
 @using TesterBlazor.Services
 @using TesterProject
 @using TesterProject.BusinessEntities
+@using TesterProject.BusinessEntities.Telegram
 
 @inject TesterProject.BusinessLogic.TelegramBot.TelegramConnector TelegramConnector
 @inject TelegramService TelegramService
