--- a/TesterBlazor/Components/Layout/NavMenu.razor
+++ b/TesterBlazor/Components/Layout/NavMenu.razor
@@ -10,7 +10,7 @@
 
 <input type="checkbox" title="Menú de navegación principal" class="navbar-toggler" />
 
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()" style="margin-top:10px">
+<div class="navbar" onclick="document.querySelector('.navbar-toggler').click()" style="margin-top:10px">
     <nav class="nav flex-column">
 
         <div class="nav-item px-2">
@@ -42,6 +42,11 @@
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="infoCredito/nucleo">
+                        <span class="bi bi-new-nucleo" aria-hidden="true"></span>Nucelo
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
                     <NavLink class="nav-link" href="infoCredito/agregarCredito">
                         <span class="bi bi-new-credit-ico-figma" aria-hidden="true"></span>Nuevo crédito
                     </NavLink>
@@ -51,10 +56,10 @@
                         <span class="bi bi-config" aria-hidden="true"></span>Configuración
                     </div>
                     <div id="submenuConfig" class="collapse">
-                        <NavLink class="nav-link" href="infoCredito/configNucleo">
+                        <NavLink class="nav-link px-4" href="infoCredito/configNucleo">
                             <span class="bi bi-new-config-nuc" aria-hidden="true"></span>Nucleo
                         </NavLink>
-                        <NavLink class="nav-link" href="infoCredito/configPersona">
+                        <NavLink class="nav-link px-4" href="infoCredito/configPersona">
                             <span class="bi bi-config-pers-ico-figma" aria-hidden="true"></span>Persona
                         </NavLink>
                     </div>
