--- a/TesterBlazor/Components/Pages/TelegramTester.razor
+++ b/TesterBlazor/Components/Pages/TelegramTester.razor
@@ -1,12 +1,4 @@
-﻿@using System.ServiceProcess
-@using TesterBlazor.Models
-@using TesterBlazor.Models.Telegram
-@using TesterBlazor.Services
-@using TesterProject
-@using TesterProject.BusinessEntities
-@using TesterProject.BusinessEntities.Telegram
-
-@inject TesterProject.BusinessLogic.TelegramBot.TelegramConnector TelegramConnector
+﻿@inject TesterProject.BusinessLogic.TelegramBot.TelegramConnector TelegramConnector
 @inject TelegramService TelegramService
 
 @inject IJSRuntime JSRuntime
