--- a/TesterBlazor/Components/_Imports.razor
+++ b/TesterBlazor/Components/_Imports.razor
@@ -7,5 +7,20 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+
+@using System.ServiceProcess
+@using System.Diagnostics
+
 @using TesterBlazor
+@using TesterBlazor.Services
+@using TesterBlazor.Models
+@using TesterBlazor.Models.InfoCredito
+@using TesterBlazor.Models.Telegram
 @using TesterBlazor.Components
+@using TesterBlazor.Components.Pages.InfoCredito.Personas.Modales
+
+@using TesterProject
+@using TesterProject.BusinessEntities
+@using TesterProject.BusinessEntities.Telegram
+@using TesterProject.BusinessEntities.InfoCredito
+@using TesterProject.BusinessLogic.Interfaces.InfoCredito
